# home-insurance-lapse-predictor

./: .gitignore  README.md  pyproject.toml
docs/: Home insurance - esure.pptx
src/: main.py
src/modules/train/: trainXgboost.py
src/modules/transform/: preprocess.py
src/modules/utils/: splitData.py
src/notebooks/: ExploratoryDataAnalysis.ipynb  ModellingAnalysis.ipynb
tests/: test_preprocess.py
