[tool.poetry]
name = "home-insurance"
version = "0.1.0"
description = "Home Insurance data https://www.kaggle.com/ycanario/home-insurance"
authors = ["kyosek <kyosuke1029@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
